# roundel

./: .aiignore  .gitignore  .pre-commit-config.yaml  CONDA_SETUP.md  README.md  feature_gen.py
map/: .aiignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  README.md
map/assets/: README.md  key.css  layerswitcher.css  main.css  simulation.css  tfl.css
map/assets/data/: README.md  combine_routes.sh  download_bus_routes.sh  platforms.json  rail_routes.json  stations.json
map/assets/data/routes/inbound/: bakerloo.json  central.json  circle.json  district.json  dlr.json  elizabeth.json  hammersmith-city.json  jubilee.json  liberty.json  lioness.json  london-cable-car.json  metropolitan.json  mildmay.json  northern.json  piccadilly.json  suffragette.json  thameslink.json  tram.json  victoria.json  waterloo-city.json  weaver.json  windrush.json
map/assets/data/routes/inbound/bus/: 1.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  135.json  136.json  (+635 more)
map/assets/data/routes/outbound/: bakerloo.json  central.json  circle.json  district.json  dlr.json  elizabeth.json  hammersmith-city.json  jubilee.json  liberty.json  lioness.json  london-cable-car.json  metropolitan.json  mildmay.json  northern.json  piccadilly.json  suffragette.json  thameslink.json  tram.json  victoria.json  waterloo-city.json  weaver.json  windrush.json
map/assets/data/routes/outbound/bus/: 1.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  (+657 more)
map/docs/: LOGGING.md
map/src/: main.rs
map/src/app/: canvas.rs  key_panel.rs  layer_panel.rs  line_css.rs  mod.rs  simulation_panel.rs
map/src/app/js/: key_control.js  layer_switcher.js  simulation_control.js
map/src/app/simulation/: mod.rs  model.rs  state.rs
map/src/data/: api.rs  line_definitions.rs  loader.rs  map_helpers.rs  mod.rs  model.rs
map/src/maplibre/: bindings.rs  helpers.rs  mod.rs
map/src/maplibre/manager/: controls.rs  events.rs  layers.rs  lifecycle.rs  mod.rs
map/src/tb8/: mod.rs
map/src/utils/: geojson.rs  log.rs  mod.rs
roundel-wb-sim/: Cargo.toml  DEVELOPMENT.md  README.md  Trunk.toml
roundel-wb-sim/src/model/: geo.rs  state.rs
roundel-wb-sim/src/ui/: camera.rs  control.rs  draw.rs
roundel-wb-sim/src/ui/input/: camera_control.rs  mod.rs  simulation_control.rs  vehicle_selection.rs
roundel-wb-sim/static/data/: tube_routes.tsv
sim/: Cargo.toml  README.md  Trunk.toml  index.html  lib.rs
sim/data/: bus_routes.tsv
sim/src/: lib.rs  model.rs  ui.rs
sim/src/model/: geo.rs  mod.rs  route.rs  route_builder.rs  state.rs  vehicle.rs
sim/src/ui/: camera.rs  control.rs  core.rs  draw.rs  input.rs  mod.rs
sim/src/ui/input/: camera_control.rs  mod.rs  vehicle_selection.rs
sim/static/stylesheets/: styles.css
(+3 files in other folders)
