[dependencies]
chrono = {version = "0.4.40", features = ["serde"]}
console_error_panic_hook = "0.1"
console_log = "1.0"
dioxus = {version = "0.6.0", features = []}
dioxus-web = "0.6.3"
js-sys = "0.3.77"
log = "0.4"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = {version = "0.3", default-features = false, features = ["HtmlCanvasElement", "HtmlHeadElement", "Document", "HtmlScriptElement", "Request", "Response", "RequestMode", "RequestInit"]}

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[package]
name = "my-map"
version = "0.1.0"
authors = ["Louis Maddox <louismmx@gmail.com>"]
edition = "2024"

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
