[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = {version = "0.3.77", features = ["Window", "HtmlInputElement", "Text", "Event", "console", "HtmlCanvasElement", "CanvasRenderingContext2d", "Document", "MouseEvent", "WheelEvent", "Request", "RequestInit", "Response", "DomRect", "TouchEvent", "TouchList", "Touch"]}

[lib]
crate-type = ["cdylib"]

[package]
name = "roundel"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
panic = "abort"
debug = false
strip = "debuginfo"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"
