[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
once_cell = {version = "1.21.1", default-features = false}
wasm-bindgen = "0.2.100"
web-sys = {version = "0.3.77", features = ["Window", "HtmlInputElement", "Text", "Event", "console", "HtmlCanvasElement", "CanvasRenderingContext2d", "Document"]}

[lib]
crate-type = ["cdylib"]

[package]
name = "trunk-hello-world"
version = "0.1.0"
edition = "2024"
